@@ -17,6 +17,9 @@ Jrotc
 Bathrom smoke
 Dr. Rosa happy
 Security guard is actually a robot
+water fountains heal you
+jrotc water fountain is brown but actually good
+mr marestaing vr
 
 ##############
 
